--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 <header>
     <img id="logo" src="headerlogo.png" alt="Naisu Agency Logo">
-    <div id="tagline">New Asian Imagination, Shaping Us</div>
+    <div id="tagline">New Asian Imagination, Shaping Us.</div>
 </header>
 
 <div id = "socials" class="icons">
